refactor code and add tests